fix: remove extra space between menus

--- a/src/components/BrowserMenu/B4aBrowserMenu.scss
+++ b/src/components/BrowserMenu/B4aBrowserMenu.scss
@@ -151,6 +151,7 @@
    background: $old-dark-blue;
    padding: 6px 0;
    font-size: 14px;
+   border-right-width: 0;
    & .item {
      padding-left: 20px;
    }
